--- a/package.json
+++ b/package.json
@@ -23,13 +23,11 @@
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-spinners": "^0.13.8",
     "react-tsparticles": "^2.11.0",
     "swiper": "^10.0.4",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.3",
     "tsparticles": "^2.11.0",
-    "typescript": "5.1.6",
-    "zustand": "^4.3.9"
+    "typescript": "5.1.6"
   }
 }
