--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -23,11 +24,17 @@
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
+    "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.11.0",
     "swiper": "^10.0.4",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.3",
     "tsparticles": "^2.11.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vaul": "^0.1.1"
+  },
+  "devDependencies": {
+    "postcss-nesting": "^12.0.0"
   }
 }
